test/cases/compile_errors/tab_inside_string.zig
export fn entry() void {
    const foo = "	hello";
    _ = foo;
}

// error
// backend=stage2
// target=native
//
// :2:18: error: string literal contains invalid byte: '\t'
